k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list
  namespace: default
spec:
  type: NodePort
  selector:
    app: todo-list
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080  # Accessible sur http://localhost:30080
